Atualizção de redirecionamento para repositórios

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <div class="projeto">
             <h3>MyCar</h3>
             <p>Este é um projeto de site de venda de carros desenvolvido para aprimorar meus conhecimentos em HTML e CSS. O objetivo principal foi criar uma interface simples, responsiva e visualmente agradável, simulando uma plataforma de compra e venda de veículos.</p>
-            <a href="https://github.com/xxRobs/projeto_UNIT_HTML">Ver repositório do Projeto</a>
+            <a href="https://github.com/xxRobs/projeto_UNIT_HTML" target="_blank">Ver repositório do Projeto</a>
         </div>
         
         <div class="projeto">
             <h3>Magister-2</h3>
             <p>Participei da refatoração da interface gráfica do portal educacional da universidade, conhecido como Magister. Este trabalho foi realizado em colaboração com o Squad 21 no âmbito do projeto "Residência de Software I", em parceria com o Grupo Tiradentes.</p>
-            <a href="https://github.com/Resdiencia-I-GT/Magister-2">Ver repositório do Projeto</a>
+            <a href="https://github.com/Resdiencia-I-GT/Magister-2" target="_blank">Ver repositório do Projeto</a>
         </div>
     </section>
 
